--- a/douban_demo.html
+++ b/douban_demo.html
@@ -3,6 +3,11 @@
 <head>
   <title>douban demo by boostrap4</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="init.css">
+  <link rel="stylesheet" type="text/css" href="douban0.css">
+  <link rel="stylesheet" type="text/css" href="douban.css">
+  <link rel="stylesheet" type="text/css" href="bundle.css">
+  <link rel="stylesheet" type="text/css" href="bundle2.css">
   
 
 </head>
@@ -306,8 +311,12 @@
         </div>
         <!--aside div-->
         <div class="aside">
-          <div class="notify-mod"></div>
-          <div id="dale_homepage_login_top_right" class="mod" ad-status="appended" data-sell-type="CPC" data-type="YoudaoRender" data-version="3.0.51"></div>
+          <div class="notify-mod">..</div>
+          <div id="dale_homepage_login_top_right" class="mod" ad-status="appended" data-sell-type="CPC" data-type="YoudaoRender" data-version="3.0.51">...</div>
+          <div class="mod" id="anony-time">...</div>
+          <div id="fp-sites" class="mod">...</div>
+          <div class="mod">...</div>
+          <div id="dale_homepage_login_bottom_right" class="mod" ad-status="loaded" data-sell-style="CPC" data-type="YoudaoRender" data-version=3.0.51>...</div>
         </div>
         <!--extra div-->
         <div class="extra">
@@ -315,7 +324,11 @@
       </div>
     </div>
     <div id="footer">
-      
+      <span id="icp" class="fleft gray-link">
+        @ 2005-2018 douban.com, all rights reserved 北京豆网科技有限公司
+      </span>
+      <a href="#" style="display: none;"></a>
+      <span class="fright">...</span>
     </div>
   </div>
 
